Prevent Video from Loading on Mobile
Wont Load if Resolution is less than 960px
+ Changed Video Fallback Image (Poster)
+ Other Tweaks

--- a/css/main.sass
+++ b/css/main.sass
@@ -75,7 +75,7 @@ a
 .service
   width: 33.33%
   overflow: auto
-  background-image: url(../img/bg02.jpg)
+  background-image: url('../img/bg02.jpg')
   padding: 50px 0
   margin: 15px 0%
   float: left
@@ -554,7 +554,7 @@ main
   overflow: hidden
   opacity: 0.8
   transform: translateY(-50%)
-
+ 
 .blog-list-wrapper
   margin: 20px 0 120px 0
   h2
@@ -945,13 +945,29 @@ a.post-author-link:hover
 @media (min-width: 320px) and (max-width: 960px)
   .video-header
     height: 35vh
+    &:before
+      content: ""
+      position: absolute
+      display: block
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      background: url(../vid/aa-videobg-poster.jpg) no-repeat center
+      background-size: cover
+      opacity: 0.9
+      z-index: -5
+    
   .blog-list-item
     width: 30%
     margin: 20px 1.5%
   .blog-post-header h1
     font-size: 28px
     line-height: normal
-    
+  
+  #video-bg
+    display: none
+      
   .services-featured
     display: block
     .service-deco-block
